[package]
name = "nftables-ban"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.4", features = ["macros"] }
log = "0.4.26"
nftables = { version = "0.6.2", features = ["tokio"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
sd-notify = "0.4.5"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.23"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
